Create service class for using Bluetooth. Create utility class for modifying Data-related UI elements. Create utility class for modifying Data. Create utility interface for passing Bluetooth data between activities. Create and implement Data unit testing. Implement Control*Fragment UI and functionality. Implement Data functionality. Data supports byte array conversion so that user data can be written or read in a human readable format. Implement functionality for Control activity. Primarily manages the state of the current Data model and passing it between its child fragments. Implement functionality for Dev class. Allows the developers finer control over the data model w/out having to modify code. Create DevBt class. Identical function as Dev but dedicated only to Bluetooth testing and communications. Implement functionality for Help activity. Now displays Q&A and contact info in an overview box. Functionally complete, Q&A wording needs to be updated. Added DevBt link button to Hub activity. Also added version info to be shown with the developer mode button. Utility class Scheme is now Deprecated. Fragment class HelpFragment is now Deprecated.

--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -39,5 +39,17 @@
     <string name="sett_2">Sett 2</string>
     <string name="sett_1">Sett 1</string>
     <string name="go">Go</string>
+    <string name="ac_phone_num_help">Tech Support Phone Number:</string>
+    <string name="ac_phone_num">(555) 555-5555</string>
+    <string name="ac_email_help">Tech Support Email Address:</string>
+    <string name="ac_email">mmbjr@autocaddy.com</string>
+    <string name="sett_disabled">DISABLED</string>
+    <string name="sett_enabled">ENABLED</string>
+    <string name="sett_off">OFF</string>
+    <string name="sett_on">ON</string>
+    <string name="sett_null">0</string>
+    <string name="precision_range_100">0-100</string>
+    <string name="set">Set</string>
+    <string name="return_to_prev_act">Return</string>
 
 </resources>
