Add reset to Data class, allowing for easy reinitialization of the model. Add getters for string vars for valid settings. Extra code but maintainable. Add UI hook up code to DevBt. Refactor UI hook up code in Dev. Redevelop Dev and DevBt UI to reflect functionality separation and accommodate the currently available developer settings. Redevelop ControlSchemeFragment UI to accommodate the currently available user settings.

--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -50,7 +50,7 @@
     <string name="sett_null">0</string>
     <string name="precision_range_100">0-100</string>
     <string name="set">Set</string>
-    <string name="return_to_prev_act">Finish</string>
+    <string name="return_to_prev_act">Back to Hub</string>
     <string name="update">Update</string>
     <string name="reset">Reset</string>
 
